k8s/dns/dns.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-server
  namespace: dns
spec:
  selector:
    matchLabels:
      app: dns-server
  replicas: 4
  template:
    metadata:
      labels:
        app: dns-server
    spec:
      containers:
        - name: dnsmasq
          image: ghcr.io/akashisn/dnsmasq@sha256:d83daf5b2cd6b58e3e38f320e1883c0d59297e41f10ea874b7f63f68ea212c6d
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: dnsmasq-conf
              mountPath: /etc/dnsmasq.d/dnsmasq.conf
              subPath: dnsmasq.conf
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
        - name: dnsdist
          image: ghcr.io/akashisn/dnsdist@sha256:e1125fba16d30716c9d0baf4dc3b01b67130e48541fc7caa11ed31818d5783b7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 53
              protocol: UDP
              name: dnsdist
            - containerPort: 443
              protocol: TCP
              name: dnsdist-doh
            - containerPort: 853
              protocol: TCP
              name: dnsdist-dot
          volumeMounts:
            - name: dnsdist-conf
              mountPath: /etc/dnsdist.conf
              subPath: dnsdist.conf
              readOnly: true
            - name: certs
              mountPath: /certs
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
      volumes:
        - name: certs
          secret:
            secretName: dns-cert
        - name: dnsmasq-conf
          configMap:
            name: dnsmasq-conf
        - name: dnsdist-conf
          configMap:
            name: dnsdist-conf
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: dns-server
  name: dns-server
  namespace: dns
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  externalIPs:
    - 10.0.1.10
  ports:
    - port: 53
      protocol: UDP
      name: dnsdist
    - port: 443
      protocol: TCP
      name: dnsdist-doh
    - port: 853
      protocol: TCP
      name: dnsdist-dot
  selector:
    app: dns-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dns-server
  annotations:
    nginx.org/ssl-services: dns-server
  namespace: dns
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dns.akashisn.info
      secretName: dns-cert
  rules:
    - host: dns.akashisn.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dns-server
                port:
                  name: dnsdist-doh
